# On-Policy-Self-Distillation

./: README.md  pyproject.toml  requirements.txt
configs/: ds_zero2_offload.json  ds_zero3_offload.json  qwen2.5-3b_a100-40g.yaml  qwen2.5-7b_a100-40g_optimized.yaml  qwen2.5-7b_a100-40g_stacktest.yaml  qwen2.5-7b_a100-80g.yaml  qwen2.5-7b_a100-80g_stacktest.yaml  smoke_qwen0.5b.yaml
configs/families/: gemma.yaml  llama.yaml  mistral.yaml  qwen.yaml
data/edgar/: facts.jsonl  test.jsonl  train.jsonl
data/smoke/: test.jsonl  train.jsonl
data_pipelines/edgar/: README.md  build.py  edgar.py  test_edgar.py
experiments/: README.md  continual_example.yaml
scripts/: eval_forgetting.py  eval_task.py  train.py  train_continual.py
sdft/: __init__.py  callbacks.py  cli.py  config.py  data.py  generation.py  losses.py  models.py  trainer.py
tests/: conftest.py  test_data.py  test_gpu_liger.py  test_gpu_quantized_teacher.py  test_gpu_vllm.py  test_losses.py  test_smoke_train.py  test_trainer_alignment.py
